2007-09-20  ARAKI Yasuhiro  <ar@debian.org>

	* app/helpers/application_helper.rb (ApplicationHelper::don_get_config): Change dafault theme from 'default' to 'MT'.

2007-09-06  ARAKI Yasuhiro  <ar@debian.org>

	* donrails/README.cache.ja: add info of cache test plugin.
	* donrails/INSTALL.ja: remove.
	* donrails/README.3rdparty: remove.

2007-09-05  ARAKI Yasuhiro  <ar@debian.org>

	* INSTALL: New file.

	* README: Small change.

	* app/views/layouts/login.rhtml: Change to use javascript_include_tag :defaults.

2007-09-03  ARAKI Yasuhiro  <ar@debian.org>

	* donrails/tool/hnf2db.rb : Fix to use DonaCa.

2007-09-01  ARAKI Yasuhiro  <ar@debian.org>

	* donrails/tool/update-custom.sh (SCRIPTNAME): Fix for directory structure change at donrails2.
	* donrails/tool/pingger/pingger.rb: likewise.

2007-08-29  ARAKI Yasuhiro  <ar@debian.org>

	* Makefile: Release as donrails 1.7.0.

2007-08-21  ARAKI Yasuhiro  <ar@debian.org>

	* donrails/app/views/admin/shared/table_article.rhtml: Fix link (fix issue #63)
	* donrails/app/views/admin/shared/table_trackback.rhtml: likewise.
	* donrails/app/views/admin/shared/table_comment.rhtml: likewise.

	* donrails/app/views/admin/shared/upload_picture.rhtml: Fix link (fix issue #65)

2007-08-04  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/functional/admin/category_controller_test.rb (Admin::test_add_category): Small fix.

	* donrails/app/controllers/notes_controller.rb (NotesController::pick_article_a2): Add feature to pick enrommented article by params[:eid].
	* donrails/app/views/notes/show_category.rhtml: Change to use it. (fix issue #62).
	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest::test_pick_article_a2): Add test for it.

	* donrails/app/helpers/application_helper.rb (ApplicationHelper::display_categories_roots_ul): Change to show article count.

2007-07-28  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/pingger/pingger.rb 
	(Article): Change to use dona_cas. (issue #61)