@@ -1,3 +1,11 @@
+2007-11-27  ARAKI Yasuhiro  <ar@debian.org>
+
+	* app/models/author.rb (Author::self.authenticate): Change for apply DEPRICATION on rails2.0
+
+2007-11-12  ARAKI Yasuhiro  <ar@debian.org>
+
+	* donrails/tool/update-custom.sh (SCRIPTNAME): Change to use 'install -d'
+
 2007-09-20  ARAKI Yasuhiro  <ar@debian.org>
 
 	* app/helpers/application_helper.rb (ApplicationHelper::don_get_config): Change dafault theme from 'default' to 'MT'.
